[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "busfactor"
path = "src/main.rs"

[lib]
name = "busfactorlib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.54"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
reqwest = {version = "0.11.9", features = ["json"]}
tokio = {version = "1.17.0", features = ["macros"]}
clap = { version = "3.1.0", features = ["derive"] }